[tool.poetry]
name = "fluffy-memory"
version = "0.1.0"
description = "Working with websockets on FastAPI"
authors = ["Osca Mwongera <oscamwongera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
