[tool.poetry]
name = "fluffy-memory"
version = "0.1.0"
description = "Working with websockets on FastAPI"
authors = ["Osca Mwongera <oscamwongera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.70.0"
Jinja2 = "^3.0.3"
uvicorn = {extras = ["standard"], version = "^0.16.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
